trying to fix tab alignment

--- a/template.css
+++ b/template.css
@@ -173,32 +173,30 @@ img#header {
     color: #fff;
 }
 #paperSubHeader ul {
-    width: 1000px;
     height: 37px;
     padding-left: 0;
     padding-top: 5px;
-    margin: 0 auto;
+    display: inline-flex;
+    width: 100%;
 }
 #paperSubHeader li {
-    float: left;
-    width: 100px;
     height: 28px;
     padding-right: 10px;
-    padding-left: 10px;
+    /* padding-left: 10px; */
     background-repeat: no-repeat;
+    margin: 0 auto;
 }
 #paperSubHeader li a {
     color: #0033a0;
-    width: 120px;
+    width: 100px;
     height: 30px;
     line-height: 17px;
     font-family: Open Sans, Helvetica, sans-serif;
     font-size: 12pt;
     font-weight: 700;
     text-align: center;
-    display: list-item;
+    display: inline-block;
     margin-right: auto;
-    margin-left: 10px;
     margin-bottom: 4px;
     padding-left: 5px;
     padding-top: 10px;
